--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "Mkhodroo\\AltfuelTicket\\": "packages/altfuel-ticket/src/"
+            "Mkhodroo\\ShahabTicketSystem\\": "packages/ticket/src/"
         }
     },
     "autoload-dev": {
