--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Mkhodroo\\AltfuelTicket\\": "packages/altfuel-ticket/src/",
-            "Mkhodroo\\UserRoles\\": "packages/mkhodroo-user-roles/src/"
+            "Mkhodroo\\UserRoles\\": "packages/mkhodroo-user-roles/src/",
+            "Mkhodroo\\MkhodrooProcessMaker\\": "packages/mkhodroo-process-maker/src" 
         }
     },
     "autoload-dev": {
