composer dump-autoload

--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
             "Mkhodroo\\AltfuelTicket\\": "packages/altfuel-ticket/src/",
             "Mkhodroo\\UserRoles\\": "packages/mkhodroo-user-roles/src/",
             "Mkhodroo\\MkhodrooProcessMaker\\": "packages/mkhodroo-process-maker/src",
-            "Mkhodroo\\Voip\\": "packages/mkhodroo-voip/src",
-            "Mkhodroo\\BPMN\\": "packages/mkhodroo-bpmn/src"
+            "Mkhodroo\\Voip\\": "packages/mkhodroo-voip/src"
         }
     },
     "autoload-dev": {
