date convertor api

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
             "Mkhodroo\\MkhodrooProcessMaker\\": "packages/mkhodroo-process-maker/src",
             "Mkhodroo\\Voip\\": "packages/mkhodroo-voip/src",
             "Mkhodroo\\CaseInsensitiveTranslate\\": "packages/case-insensitive-translate/src",
-            "Mkhodroo\\SmsTemplate\\": "packages/mkhodroo-sms-template/src"
+            "Mkhodroo\\SmsTemplate\\": "packages/mkhodroo-sms-template/src",
+            "Mkhodroo\\DateConvertor\\": "packages/mkhodroo-date-convertor/src"
         }
     },
     "autoload-dev": {
