--- a/.env
+++ b/.env
@@ -3,6 +3,14 @@ APP_ENV=local
 APP_KEY=base64:DryL2iF0gvzN7hpmQn01bdIhIFR5+9yqiea2NrEzFXs=
 APP_DEBUG=true
 APP_URL=http://localhost
+PM_SERVER=https://pmaker.altfuel.ir
+PM_CLIENT_ID=x-pm-mobile-client
+PM_CLIENT_SECRET=4426746995afa07e7485df1055471800
+PM_ADMIN_USER=rest_api
+PM_ADMIN_PASS=Mk09376922176
+
+PM_REPORT_SERVER=http://pmaker.altfuel.ir:4339
+PM_REPORT_API_TOKEN=OioCtGT5p4AjS8WJE6Pt1IR1kH21Fobk
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,6 +22,13 @@ DB_PORT=3306
 DB_DATABASE=altfueli_lable
 DB_USERNAME=root
 DB_PASSWORD=
+
+DB_CONNECTION2=mysql
+DB_HOST2=80.71.149.190
+DB_PORT2=3306
+DB_DATABASE2=wf_workflow
+DB_USERNAME2=altfuel
+DB_PASSWORD2=FiBmq8S//.wms2.L
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
