--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
             "Mkhodroo\\AgencyInfo\\": "packages/mkhodroo-agency-info/src",
             "Mkhodroo\\Cities\\": "packages/mkhodroo-cities/src",
             "Mkhodroo\\VacationRequest\\": "packages/vacation-request/src/",
-            "UserProfile\\": "packages/user-profile/src/"
+            "UserProfile\\": "packages/user-profile/src/",
+            "IrngvPoll\\": "packages/behin-irngv-poll/src/"
         }
     },
     "autoload-dev": {
