--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
             "AiAssistant\\": "packages/behin-ai-assistant/src/",
             "BehinTest\\": "packages/behin-test/src/",
             "TodoList\\": "packages/behin-todo-list/src/",
-            "TelegramBot\\": "packages/behin-telegram-bot/src/"
+            "TelegramBot\\": "packages/behin-telegram-bot/src/",
+            "BaleBot\\": "packages/behin-bale-bot/src/"
         }
     },
     "autoload-dev": {
