--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
             "BehinTest\\": "packages/behin-test/src/",
             "TodoList\\": "packages/behin-todo-list/src/",
             "TelegramBot\\": "packages/behin-telegram-bot/src/",
-            "BaleBot\\": "packages/behin-bale-bot/src/"
+            "BaleBot\\": "packages/behin-bale-bot/src/",
+            "BehinLogging\\": "packages/behin-logging/src/"
         }
     },
     "autoload-dev": {
