--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "binshops/laravel-blog": "v8.2.0",
+        "doctrine/dbal": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
         "hekmatinasser/verta": "^8.1",
         "laravel/framework": "^9.19",
