Revert "bale bot dislike ticket"
This reverts commit fca325ffcbae4f8a9f25c8cf3ed0a3059bfb7de2.

--- a/composer.json
+++ b/composer.json
@@ -58,8 +58,7 @@
             "ExcelReader\\": "packages/behin-excel-reader/src/",
             "Behin\\Hamayesh\\": "packages/behin-hamayesh/src/",
             "Registration\\": "packages/behin-registration/src/",
-            "Behin\\Complaint\\": "packages/behin-complaint/src/",
-            "TelegramTicket\\": "packages/behin-telegram-ticket/src/"
+            "Behin\\Complaint\\": "packages/behin-complaint/src/"
         }
     },
     "autoload-dev": {
